--- a/catkin_qt/src/ros_qt_demo/ui/main_window.ui
+++ b/catkin_qt/src/ros_qt_demo/ui/main_window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1074</width>
+    <width>1299</width>
     <height>704</height>
    </rect>
   </property>
@@ -34,153 +34,94 @@
        <locale language="English" country="Australia"/>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
         <string>Navigation</string>
        </attribute>
-       <widget class="QWidget" name="">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>40</y>
-          <width>501</width>
-          <height>561</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="layout_rviz"/>
-       </widget>
-       <widget class="QWidget" name="">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>501</width>
-          <height>27</height>
-         </rect>
-        </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_5">
-         <item>
-          <widget class="QPushButton" name="pushButton">
-           <property name="text">
-            <string>PushButton</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_2">
-           <property name="text">
-            <string>PushButton</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <layout class="QVBoxLayout" name="layout_rviz"/>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="tab_status">
        <attribute name="title">
         <string>Image</string>
        </attribute>
-       <widget class="QLabel" name="label_image">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>50</y>
-          <width>480</width>
-          <height>270</height>
-         </rect>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>480</width>
-          <height>270</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>1920</width>
-          <height>1080</height>
-         </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">border: 1px solid black</string>
-        </property>
-        <property name="text">
-         <string>NO IMAGE</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_image_topic">
-        <property name="geometry">
-         <rect>
-          <x>110</x>
-          <y>350</y>
-          <width>191</width>
-          <height>25</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>vis_detected_obs</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_sub_image">
-        <property name="geometry">
-         <rect>
-          <x>330</x>
-          <y>350</y>
-          <width>161</width>
-          <height>25</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Subscribe</string>
-        </property>
-       </widget>
-       <widget class="QFrame" name="frame">
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>390</y>
-          <width>481</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="frameShape">
-         <enum>QFrame::HLine</enum>
-        </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_5">
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>350</y>
-          <width>91</width>
-          <height>20</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Topic Name:</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_6">
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>20</y>
-          <width>67</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Image</string>
-        </property>
-       </widget>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Image</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_image">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>720</width>
+            <height>450</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>720</width>
+            <height>450</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">border: 1px solid black</string>
+          </property>
+          <property name="text">
+           <string>NO IMAGE</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_6">
+          <item>
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>Topic Name:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="lineEdit_image_topic">
+            <property name="text">
+             <string>vis_detected_obs</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushButton_sub_image">
+            <property name="text">
+             <string>Subscribe</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
@@ -487,6 +428,22 @@ p, li { white-space: pre-wrap; }
         </property>
        </widget>
       </widget>
+      <widget class="QWidget" name="tab_4">
+       <attribute name="title">
+        <string>Three View</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_5">
+        <item>
+         <layout class="QVBoxLayout" name="layout_front"/>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="layout_side"/>
+        </item>
+        <item>
+         <layout class="QVBoxLayout" name="layout_top"/>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -496,7 +453,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1074</width>
+     <width>1299</width>
      <height>22</height>
     </rect>
    </property>
