add browse file function

--- a/catkin_qt/src/ros_qt_demo/ui/main_window.ui
+++ b/catkin_qt/src/ros_qt_demo/ui/main_window.ui
@@ -34,7 +34,7 @@
        <locale language="English" country="Australia"/>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
@@ -374,7 +374,7 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;source ~/catkin_ws/devel/setup.bash&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;source ~/ros_qt/catkin_ws/devel/setup.bash&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;roslaunch temporary_calib_interface calib_vis_bag.launch&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;rosbag play /mnt/hgfs/VM-Ubuntu/Calibration/record.bag -l&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
@@ -397,9 +397,9 @@ p, li { white-space: pre-wrap; }
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>270</y>
+          <y>360</y>
           <width>501</width>
-          <height>321</height>
+          <height>231</height>
          </rect>
         </property>
         <attribute name="headerMinimumSectionSize">
@@ -418,7 +418,7 @@ p, li { white-space: pre-wrap; }
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>250</y>
+          <y>340</y>
           <width>111</width>
           <height>17</height>
          </rect>
@@ -426,6 +426,35 @@ p, li { white-space: pre-wrap; }
         <property name="text">
          <string>Display</string>
         </property>
+       </widget>
+       <widget class="QWidget" name="horizontalLayoutWidget">
+        <property name="geometry">
+         <rect>
+          <x>14</x>
+          <y>240</y>
+          <width>501</width>
+          <height>80</height>
+         </rect>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_8">
+         <item>
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>Data file path: </string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEdit_path"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_path">
+           <property name="text">
+            <string>Play bag file</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_4">
